vision_encoder_exp配置文件

--- a/我的指令.md
+++ b/我的指令.md
@@ -6,5 +6,19 @@ CUDA_VISIBLE_DEVICES=0,1,2,3 python launch.py --mode accelerate \
     --config configs/embodied-pq3d-final/embodied_scan_instseg_cyh.yaml
 ```
 
+用两张进行训练
+```
+CUDA_VISIBLE_DEVICES=0,1 python launch.py --mode accelerate \
+    --gpu_per_node=2 \
+    --mem_per_gpu=40 \
+    --config configs/vision_encoder_exp/DINOv2.yaml
+```
+```
+CUDA_VISIBLE_DEVICES=2,3 python launch.py --mode accelerate \
+    --gpu_per_node=2 \
+    --mem_per_gpu=40 \
+    --port 29501\
+    --config configs/vision_encoder_exp/DINOv3.yaml
+```
 评估分割质量
 python3 run.py --config-path configs/embodied-pq3d-final --config-name embodied_scan_instseg_cyh.yaml ++mode=test ++pretrain_ckp_path=/hdd/caoyuhao/VLN_ws/MTU3D/outputs/Embodied-PQ3D/2025-09-16-21:09:35.254581/ckpt
