--- a/我的指令.md
+++ b/我的指令.md
@@ -20,5 +20,11 @@ CUDA_VISIBLE_DEVICES=2,3 python launch.py --mode accelerate \
     --port 29501\
     --config configs/vision_encoder_exp/DINOv3.yaml
 ```
+用一张进行debug
+CUDA_VISIBLE_DEVICES=3 python launch.py --mode accelerate \
+    --gpu_per_node=1 \
+    --mem_per_gpu=40 \
+    --port 2778\
+    --config configs/sonata_exp/sonata.yaml
 评估分割质量
 python3 run.py --config-path configs/embodied-pq3d-final --config-name embodied_scan_instseg_cyh.yaml ++mode=test ++pretrain_ckp_path=/hdd/caoyuhao/VLN_ws/MTU3D/outputs/Embodied-PQ3D/2025-09-16-21:09:35.254581/ckpt
