修改优化器配置，只保留require_grad=True的参数

--- a/我的指令.md
+++ b/我的指令.md
@@ -28,3 +28,5 @@ CUDA_VISIBLE_DEVICES=3 python launch.py --mode accelerate \
     --config configs/sonata_exp/sonata.yaml
 评估分割质量
 python3 run.py --config-path configs/embodied-pq3d-final --config-name embodied_scan_instseg_cyh.yaml ++mode=test ++pretrain_ckp_path=/hdd/caoyuhao/VLN_ws/MTU3D/outputs/Embodied-PQ3D/2025-09-16-21:09:35.254581/ckpt
+
+python3 run.py --config-path configs/embodied-pq3d-final --config-name embodied_scan_instseg_test.yaml ++mode=test ++pretrain_ckp_path=/hdd/caoyuhao/VLN_ws/MTU3D/outputs/Embodied-PQ3D/ckpt
