--- a/我的指令.md
+++ b/我的指令.md
@@ -32,3 +32,5 @@ python3 run.py --config-path configs/embodied-pq3d-final --config-name embodied_
 CUDA_VISIBLE_DEVICES=1 python3 run.py --config-path configs/embodied-pq3d-final --config-name embodied_scan_instseg_test.yaml ++mode=test ++pretrain_ckp_path=/hdd/caoyuhao/VLN_ws/MTU3D/outputs/Embodied-PQ3D/ckpt
 
 CUDA_VISIBLE_DEVICES=1 python3 run.py --config-path configs/conceptRT-exp  --config-name DINOv2.yaml ++mode=test ++pretrain_ckp_path=/hdd/caoyuhao/VLN_ws/MTU3D/outputs/Embodied-PQ3D/ckpt
+
+CUDA_VISIBLE_DEVICES=0 python3 run.py --config-path configs/conceptRT-exp  --config-name DINOv2_test.yaml ++mode=test ++pretrain_ckp_path=/hdd/caoyuhao/VLN_ws/MTU3D/outputs/CONCEPT-RT/2025-10-16-22:12:39.357625/ckpt
